--- a/src/app/(pages)/create-account/CreateAccountForm/index.module.scss
+++ b/src/app/(pages)/create-account/CreateAccountForm/index.module.scss
@@ -2,19 +2,16 @@
 
 .form {
   margin-bottom: var(--base);
+  margin-top: calc(var(--base) * 2);
   display: flex;
   flex-direction: column;
-  gap: calc(var(--base) / 2);
   align-items: flex-start;
-  width: 66.66%;
-
-  @include mid-break {
-    width: 100%;
-  }
+  gap: calc(var(--base) / 2);
+  width: 100%;
 }
 
 .submit {
-  margin-top: calc(var(--base) / 2);
+  margin-top: calc(var(--base));
 }
 
 .message {
