--- a/src/app/_components/Input/index.module.scss
+++ b/src/app/_components/Input/index.module.scss
@@ -7,13 +7,13 @@
 .input {
   width: 100%;
   font-family: system-ui;
-  border-radius: 0;
+  border-radius: 5px;
   box-shadow: none;
-  border: none;
+  border: 1px solid var(--theme-elevation-200);
   background: none;
-  background-color: var(--theme-elevation-100);
+  background-color: var(--theme-elevation-50);
   color: var(--theme-elevation-1000);
-  height: calc(var(--base) * 2);
+  height: calc(var(--base) * 2.2);
   line-height: calc(var(--base) * 2);
   padding: 0 calc(var(--base) / 2);
   font-size: inherit;
@@ -51,6 +51,7 @@
   display: block;
   line-height: 1;
   margin-bottom: calc(var(--base) / 2);
+  font-size: 12px;
 }
 
 .errorMessage {
