--- a/src/app/_components/Footer/FooterComponent/index.module.scss
+++ b/src/app/_components/Footer/FooterComponent/index.module.scss
@@ -1,7 +1,7 @@
 @use '../../../_css/queries.scss' as *;
 
 .footer {
-  padding: 30px 0;
+  padding: 6rem 0;
   background-color: var(--theme-elevation-1000);
   color: var(--theme-elevation-0);
 
@@ -49,7 +49,7 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
-  gap: calc(var(--base) / 2) var(--base);
+  gap: calc(var(--base) / 1) var(--base);
 
   @include small-break {
     margin-top: 30px;
@@ -60,7 +60,7 @@
 }
 
 .logo {
-  width: 170px;
+  width: 80px;
 }
 
 .hr {
